# SyncDraft

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  test.json
client/editor-app/: .eslintrc.cjs  package-lock.json  package.json  svelte.config.js
client/editor-app/src/: app.html  config.js  stores.js
client/editor-app/src/lib/utils/: logoot.js  peer.ts  webrtc_clients.cjs  webrtc_clients.ts
client/editor-app/src/routes/: +layout.svelte  +page.svelte
client/editor-app/src/routes/documents/: +page.svelte
client/editor-app/src/routes/edit/: +page.svelte
client/editor-app/src/routes/login/: +page.svelte
client/editor-app/src/routes/signup/: +page.svelte
dockerfiles/: Dockerfile_rust_backend.yaml  rust_backend-docker-compose.yaml
docs/: Milestone_3.docx  arch.drawio  diag3.drawio
mock-server/: package-lock.json  package.json  server.js
peerJS_server/: index.js  package.json
scripts/: set_mongo.sh
sync_draft_be/: Cargo.toml
sync_draft_be/src/: crdt.rs  doc.rs  main.rs  mongo_wrapper.rs  user.rs  vtime.rs
