[package]
name = "sync_draft_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
futures = "0.3.30"
http-body-util = "0.1.0"
hyper = {version = "1.2.0", features = ["full"]}
hyper-util = {version = "0.1.3", features = ["client", "http1", "client-legacy"]}
mime = "0.3.17"
mongodb = "2.8.2"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = {version = "0.5.2", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
